added bg image and color overlay over the bg.

--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
     <title>Band It</title>
   </head>
   <body>
-
-    <div class="container h-100 landingContainer">
-      <div class="row h-100">
-        <div class="col-12">
-          <div class="mainContent">
-            <h1>Band It</h1>
-            <p>See your favorite bands live. Search their upcoming concerts and get recommendations for bars and restaurants near the concert venue before the show.</p>
-            <div class="input-group">
-              <input id="bandName" class="form-control" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
-              <button id="submitBtn" class="tn btn-info"type="button" name="button">See Venues</button>
+    <div class="mainContentOverlay"></div>
+      <div class="container h-100 landingContainer">
+        <div class="row h-100">
+          <div class="col-12">
+            <div class="mainContent">
+              <h1>Band It</h1>
+              <p>See your favorite bands live. Search their upcoming concerts and get recommendations for bars and restaurants near the concert venue before the show.</p>
+              <div class="input-group">
+                <input id="bandName" class="form-control" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
+                <button id="submitBtn" class="tn btn-info"type="button" name="button">See Venues</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+
 
 
     <!-- Optional JavaScript -->
