--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/reset.css">
+    <!-- Google fonts Merriweater Sans -->
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Outline|Changa+One|Merriweather+Sans:400,700,800" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Custom CSS -->
@@ -14,14 +15,14 @@
   <body>
     <div class="mainContentOverlay"></div>
       <div class="container h-100 landingContainer">
-        <div class="row h-100">
-          <div class="col-12">
+        <div class="row h-100 align-items-center">
+          <div class="col-12" align=center>
             <div class="mainContent">
-              <h1>Band It</h1>
-              <p>See your favorite bands live. Search their upcoming concerts and get recommendations for bars and restaurants near the concert venue before the show.</p>
+              <h1 class="mb-2">Band-It</h1>
+              <p class="pb-2">See your favorite bands live. Search their upcoming concerts and get recommendations for bars and restaurants near the concert venue before the show.</p>
               <div class="input-group">
-                <input id="bandName" class="form-control" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
-                <button id="submitBtn" class="tn btn-info"type="button" name="button">See Venues</button>
+                <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
+                <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
               </div>
             </div>
           </div>
