--- a/results.html
+++ b/results.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <!-- Google fonts Merriweather Sans -->
     <link href="https://fonts.googleapis.com/css?family=Bungee+Outline|Changa+One|Merriweather+Sans:400,700,800" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -16,13 +17,12 @@
     <!-- Beginning of Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark">
             <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href=""><h1 class="mb-2">Band It</h1></a>
-                </ul>
+                <div class="mainContent">
+                        <a class="nav-link" href="index.html"><h1 id="logoLeft">Band It</h1></a>
+                </div>
             </div>
             <div class="mx-auto order-0">
-                <a class="navbar-brand mx-auto" href="index.html"><img src="images/raccoon-guitar.jpg" width="65px" height="65px"></a>
+                <a class="navbar-brand mx-auto" href="index.html"><img src="images/raccoon-guitar.jpg" width="90px" height="90px"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -38,21 +38,6 @@
                 </ul>
             </div>
         </nav>
-    <!-- <nav class="navbar navbar-expand-lg">
-    <div class="navbar-inner">
-        <a class="navbar-brand" href="index.html"><img src="images/raccoon-guitar.jpg" width="75px" height="75px"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="inputGroup">
-        <form class="form-inline my-2 my-lg-0" id="artistSearch">
-        <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
-        <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
-        </form>
-        </div>
-        </div>
-    </div>
-    </nav> -->
     <!-- End of Navbar -->
 
 <body>
