--- a/results.html
+++ b/results.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Band It | Band</title>
 </head>
     <!-- Beginning of Navbar -->
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="mx-auto order-0">
-                <a class="navbar-brand mx-auto" href="index.html"><img src="images/raccoon-guitar.jpg" width="90px" height="90px"></a>
+                <a class="navbar-brand mx-auto" href="index.html"><img src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                     <span class="navbar-toggler-icon"></span>
                 </button>
