added working path to css to public, got rid of post method in form

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./public/css/style.css">
+
     <title>Band It</title>
   </head>
   <body>
@@ -21,7 +23,7 @@
             <div class="mainContent">
               <h1 class="mb-2">Band-It</h1>
               <p class="pb-2">See your favorite bands live. Search their upcoming concerts and get recommendations for bars and restaurants near the concert venue before the show.</p>
-              <form class="" action="" method="post">
+              <form class="">
                 <div class="input-group">
                   <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
                   <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
