--- a/results.html
+++ b/results.html
@@ -12,17 +12,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./public/css/style.css">
     <title>Band It | Band</title>
 </head>
     <!-- Beginning of Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark">
             <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
                 <div class="mainContent">
-                        <a class="nav-link" href="index.html"><h1 id="logoLeft">Band It</h1></a>
+                        <a class="nav-link" href="index.html"><h1>Band It</h1></a>
                 </div>
             </div>
             <div class="mx-auto order-0">
-                <a class="navbar-brand mx-auto" href="index.html"><img src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
+                <a class="navbar-brand mx-auto" href="index.html"><img src="./public/images/raccoon-guitar.jpg" width="90px" height="90px"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                     <span class="navbar-toggler-icon"></span>
                 </button>
