--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="mainContent">
               <h1 class="mb-2">Band-It</h1>
               <p class="pb-2">See your favorite bands live. Search their upcoming concerts and get recommendations for bars and restaurants near the concert venue before the show.</p>
-              
+
                 <div class="input-group">
                   <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
                   <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
@@ -40,8 +40,9 @@
     <script type="text/javascript">
     $("#submitBtn").on("click", function(event){
         event.preventDefault();
-        if($("#bandName").val() !== ""){
-          var bandname = $("#bandName").val();
+        if($("#bandName").val().trim() !== ""){
+          var bandname = $("#bandName").val().trim().split(" ").join("+");
+
           window.location.href = `/${bandname}`;
         }
     })
