added yelp results into boostrap cards format

--- a/results.html
+++ b/results.html
@@ -65,8 +65,11 @@
         </div>
 
         <div class="row">
-          <div class="col">
-            <p id="yelpResults"></p>
+            <div class="card-columns">
+              <div id="yelpResults" class="card">
+
+              </div>
+
           </div>
 
         </div>
