img attr is correct and image shows, some styling of cards

--- a/results.html
+++ b/results.html
@@ -65,8 +65,9 @@
         </div>
 
         <div class="row">
-            <div class="card-columns">
+            <div class="col col-12 card-columns">
               <div id="yelpResults" class="card">
+
 
               </div>
 
