--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Band It</title>
   </head>
-  <body>
+  <body class="indexBody">
 
     <div class="mainContentOverlay"></div>
       <div class="container h-100 landingContainer">
