--- a/results.html
+++ b/results.html
@@ -44,7 +44,7 @@
     <!-- End of Navbar -->
 
 <body>
-  <div class="mainContentOverlay"></div>
+  <!-- <div class="mainContentOverlay"></div> -->
 
     <!-- Beginning of Content Body -->
     <div class="container">
