--- a/results.html
+++ b/results.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="row">
-            <div class="col col-12 card-columns">
+            <div class="col card-columns">
               <div id="yelpResults" class="card">
 
 
