--- a/results.html
+++ b/results.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="mx-auto order-0">
-                <a class="navbar-brand mx-auto" href="index.html"><img src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
+                <a class="navbar-brand mx-auto" href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -65,9 +65,7 @@
         </div>
 
         <div class="row">
-            <div class="col card-columns">
-              <div id="yelpResults" class="card">
-
+            <div id="yelpResults" class="col card-columns">
 
               </div>
 
