made the venues list div scroll on overflow

--- a/results.html
+++ b/results.html
@@ -59,7 +59,11 @@
         <!-- Second Row -->
         <div class="row">
             <!-- Artist Location/Date Div -->
-            <div class="col-md-4" id="artistLocation"></div>
+            <div class="col-md-4 venuesList" >
+              <div id="artistLocation" class="">
+
+              </div>
+            </div>
             <!-- Artist Google/Yelp Div -->
             <div class="col-md-8" id="artistMap"></div>
         </div>
