got rid of padding for artist image, added mt-4 above content, changed button bg color to bandit suit color.

--- a/results.html
+++ b/results.html
@@ -49,7 +49,7 @@
     <!-- Beginning of Content Body -->
     <div class="container">
         <!-- First Row -->
-        <div class="row">
+        <div class="row mt-4">
             <!-- Artist Image Div -->
             <div class="col-md-4" id="artistImage"></div>
             <!-- Arist Name and Information Div -->
