added background color to body, padding bottom to body, white background to venues list and artist name with black text.

--- a/results.html
+++ b/results.html
@@ -21,14 +21,11 @@
     <nav class="navbar navbar-expand-md navbar-dark">
             <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
                 <div class="mainContent">
-                        <a class="nav-link" href="index.html"><h1>Band It</h1></a>
+                        <a class="nav-link" href=""><h1>Band It</h1></a>
                 </div>
             </div>
             <div class="mx-auto order-0">
                 <a class="navbar-brand mx-auto" href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
             </div>
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                 <ul class="navbar-nav ml-auto">
@@ -51,17 +48,22 @@
         <!-- First Row -->
         <div class="row mt-4">
             <!-- Artist Image Div -->
-            <div class="col-md-4" id="artistImage"></div>
+            <div class="col-md-4" id="artistImage">
+
+            </div>
             <!-- Arist Name and Information Div -->
-            <div class="col-md-8" id="artistName"></div>
+            <div class="col-md-8" id="artistName">
+
+            </div>
         </div>
 
         <!-- Second Row -->
         <div class="row">
             <!-- Artist Location/Date Div -->
             <div class="col-md-4 venuesList" >
-              <div id="artistLocation" class="">
-
+              <div>
+                <h3>Upcoming Events</h3>
+                <p id="artistLocation"></p>
               </div>
             </div>
             <!-- Artist Google/Yelp Div -->
