added venue buttons and adjusted paddings.

--- a/results.html
+++ b/results.html
@@ -60,9 +60,9 @@
         <!-- Second Row -->
         <div class="row">
             <!-- Artist Location/Date Div -->
-            <div class="col-md-4 venuesList" >
-              <div>
-                <h3>Upcoming Events</h3>
+            <div class="col-md-4 venuesList">
+              <div class="upcomingEvents">
+                <h4>Upcoming Events</h4>
                 <p id="artistLocation"></p>
               </div>
             </div>
