changed bg color of yelp cards and size of logo on results page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row h-100 align-items-center">
           <div class="col-12" align=center>
             <div class="mainContent">
-              <h1 class="mb-2">Band-It</h1>
+              <h1 class="mb-2 indexBandIt">Band-It</h1>
               <p class="pb-2">ee your favorite bands live. Search their upcoming concerts and get recommendations for bars and restaurants near the concert venue before the show.</p>
 
                 <div class="input-group">
