--- a/results.html
+++ b/results.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-md navbar-dark">
             <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
                 <div class="mainContent">
-                        <a class="nav-link" href=""><h1>Band It</h1></a>
+                        <a class="nav-link resultsLogo" href=""><h1 class="resultsBandIt">Band It</h1></a>
                 </div>
             </div>
             <div class="mx-auto order-0">
