changed @media at max-width 575 so that the divs don't have margins. added yelp recommendations header.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <title>Band It</title>
   </head>
+
   <body class="indexBody">
 
     <div class="mainContentOverlay"></div>
@@ -22,13 +23,11 @@
           <div class="col-12" align=center>
             <div class="mainContent">
               <h1 class="mb-2 indexBandIt">Band-It</h1>
-              <p class="pb-2">ee your favorite bands live. Search their upcoming concerts and get recommendations for bars and restaurants near the concert venue before the show.</p>
-
+              <p class="pb-2">See your favorite bands live. Search their upcoming concerts and get recommendations for bars and restaurants near the concert venue before and after the show.</p>
                 <div class="input-group">
                   <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
                   <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
                 </div>
-
             </div>
           </div>
         </div>
