--- a/results.html
+++ b/results.html
@@ -11,90 +11,79 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Custom CSS -->
-
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./public/css/style.css">
-
     <title>Band It | Band</title>
 </head>
-    <!-- Beginning of Navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark">
-            <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-                <div class="mainContent">
-                        <a class="nav-link resultsLogo" href=""><h1 class="resultsBandIt">Band It</h1></a>
-                </div>
-            </div>
-            <div class="mx-auto order-0">
-                <a class="navbar-brand mx-auto" href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
-            </div>
-            <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <form class="form-inline my-2 my-lg-0" id="artistSearch">
-                            <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
-                            <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
-                        </form>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    <!-- End of Navbar -->
+  <!-- Beginning of Navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark">
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+      <div class="mainContent">
+        <a class="nav-link resultsLogo" href=""><h1 class="resultsBandIt">Band-It</h1></a>
+      </div>
+    </div>
+    <div class="mx-auto order-0">
+      <a class="navbar-brand mx-auto" href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
+    </div>
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <form class="form-inline my-2 my-lg-0" id="artistSearch">
+            <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
+            <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
+          </form>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- End of Navbar -->
 
 <body>
-  <!-- <div class="mainContentOverlay"></div> -->
-
     <!-- Beginning of Content Body -->
-    <div class="container">
-        <!-- First Row -->
-        <div class="row mt-4">
-            <!-- Artist Image Div -->
-            <div class="col-md-4" id="artistImage">
+  <div class="container">
+      <!-- First Row -->
+    <div class="row">
+        <!-- Artist Image Div -->
+      <div class="col-md-4" id="artistImage">
 
-            </div>
-            <!-- Arist Name and Information Div -->
-            <div class="col-md-8" id="artistName">
+      </div>
+      <!-- Arist Name and Information Div -->
+      <div class="col-md-8" id="artistName">
 
-            </div>
+      </div>
+    </div>
+    <!-- Second Row -->
+    <div class="row">
+      <!-- Artist Location/Date Div -->
+      <div class="col-md-4 venuesList">
+        <div class="upcomingEvents">
+          <h4>Upcoming Events</h4>
+          <p id="artistLocation"></p>
         </div>
+      </div>
+      <!-- Artist Google/Yelp Div -->
+      <div class="col-md-8" id="artistMap"></div>
+    </div>
+    <div class="row">
+      <div class="col yelpResultCardsHeader">
+        <p class="yelpRecommendations">Yelp Recommendations</p>
+      </div>
+    </div>
+    <div class="row">
+      <div id="yelpResults" class="col card-columns">
 
-        <!-- Second Row -->
-        <div class="row">
-            <!-- Artist Location/Date Div -->
-            <div class="col-md-4 venuesList">
-              <div class="upcomingEvents">
-                <h4>Upcoming Events</h4>
-                <p id="artistLocation"></p>
-              </div>
-            </div>
-            <!-- Artist Google/Yelp Div -->
-            <div class="col-md-8" id="artistMap"></div>
-        </div>
-
-        <div class="row">
-            <div id="yelpResults" class="col card-columns">
-
-              </div>
-
-          </div>
-
-        </div>
-
-
-    <!-- End of Content Body -->
-
+      </div>
+    </div>
+  <!-- end of container div -->
+  </div>
 
     <!-- Optional JavaScript -->
-
-
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBP0npkBP6rdCu0Wy-Z4llSBsHOdrEQTJE&callback=initMap">
-      </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBP0npkBP6rdCu0Wy-Z4llSBsHOdrEQTJE&callback=initMap"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    <!-- custon javascript -->
     <script type="text/javascript" src="./js/script.js"></script>
     <script type="text/javascript" src="./public/js/script.js"></script>
 
