--- a/results.html
+++ b/results.html
@@ -15,28 +15,31 @@
     <link rel="stylesheet" type="text/css" href="./public/css/style.css">
     <title>Band It | Band</title>
 </head>
-  <!-- Beginning of Navbar -->
-  <nav class="navbar navbar-expand-md navbar-dark">
-    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-      <div class="mainContent">
-        <a class="nav-link resultsLogo" href=""><h1 class="resultsBandIt">Band-It</h1></a>
-      </div>
-    </div>
-    <div class="mx-auto order-0">
-      <a class="navbar-brand mx-auto" href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
-    </div>
-    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <form class="form-inline my-2 my-lg-0" id="artistSearch">
-            <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
-            <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
-          </form>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!-- End of Navbar -->
+<!-- Beginning of Navbar -->
+ <nav class="navbar navbar-expand-md navbar-dark">
+   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+     <div class="mainContent">
+       <a class="nav-link resultsLogo" href="index.html"><h1 class="resultsBandIt">Band-It</h1></a>
+     </div>
+   </div>
+   <div class="mx-auto order-0">
+     <a class="navbar-brand mx-auto" href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+   </div>
+   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+     <ul class="navbar-nav ml-auto">
+       <li class="nav-item">
+         <form class="form-inline my-2 my-lg-0" id="artistSearch">
+           <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
+           <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
+         </form>
+       </li>
+     </ul>
+   </div>
+</nav>
+ <!-- End of Navbar -->
 
 <body>
     <!-- Beginning of Content Body -->
