fixed card border bottom issue, change restaurnat name font color.

--- a/results.html
+++ b/results.html
@@ -22,7 +22,7 @@
        <a class="nav-link resultsLogo" href="index.html"><h1 class="resultsBandIt">Band-It</h1></a>
      </div>
    </div>
-   <div class="mx-auto order-0">
+   <div class="mx-auto order-0 justify-content-between">
      <a class="navbar-brand mx-auto" href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
        <span class="navbar-toggler-icon"></span>
