--- a/results.html
+++ b/results.html
@@ -23,14 +23,14 @@
      </div>
    </div>
    <div class="mx-auto order-0 justify-content-between">
-     <a class="navbar-brand mx-auto" href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-       <span class="navbar-toggler-icon"></span>
+     <a class="navbar-brand mx-auto navbar-right" href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
+     <button class="navbar-toggler navbar-right" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+       <span class="navbar-toggler-icon navbar-right"></span>
      </button>
    </div>
    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-     <ul class="navbar-nav ml-auto">
-       <li class="nav-item">
+     <ul class="navbar-nav ml-auto justify-content-right">
+       <li class="nav-item justify-content-right">
          <form class="form-inline my-2 my-lg-0" id="artistSearch">
            <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
            <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
