--- a/results.html
+++ b/results.html
@@ -79,6 +79,11 @@
     </div>
   <!-- end of container div -->
   </div>
+  <div class="row justify-content-center ">
+    <div class="col logoFooterLink w-100" align=center>
+      <a class="align-self-center " href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="200px" height="200px"></a>
+    </div>
+  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
