changed bg to paisley img

--- a/results.html
+++ b/results.html
@@ -41,7 +41,7 @@
 </nav>
  <!-- End of Navbar -->
 
-<body>
+<body class="resultsBody">
     <!-- Beginning of Content Body -->
   <div class="container">
       <!-- First Row -->
