got rid of extra padding on right of page by assignin w-100 to footer row

--- a/results.html
+++ b/results.html
@@ -79,8 +79,8 @@
     </div>
   <!-- end of container div -->
   </div>
-  <div class="row justify-content-center ">
-    <div class="col logoFooterLink w-100" align=center>
+  <div class="row w-100 justify-content-center ">
+    <div class="col logoFooterLink" align=center>
       <a class="align-self-center " href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="200px" height="200px"></a>
     </div>
   </div>
