--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         <div class="row h-100 align-items-center">
           <div class="col-4" align=center>
             <div class="mainContent">
+              <div class=indexBandIt"> 
               <h1 class="animated rotateIn" id="heading">Band-It</h1>
               <p class="pb-2">Find your most beloved bands playing in venues near you! Band It will provide you everything you need to create your perfect night!</p>
                 <div class="input-group">
                   <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
                   <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
                 </div>
+              </div>                                                                                   
             </div>
           </div>
           <div class="col-4" align=center></div>
