--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="col-4" align=center></div>
           <div class="col-4" align=center></div>
-          
+
         </div>
       </div>
 
@@ -46,7 +46,7 @@
         if($("#bandName").val().trim() !== ""){
           var bandname = $("#bandName").val().trim();
 
-          window.location.href = `/${bandname}`;
+          window.location.href = `/bands/${bandname}`;
         }
     })
     </script>
