--- a/results.html
+++ b/results.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" type="text/css" href="./public/css/style.css">
     <title>Band It | Band</title>
 </head>
@@ -23,7 +23,7 @@
      </div>
    </div>
    <div class="mx-auto order-0 justify-content-between">
-     <a class="navbar-brand mx-auto navbar-right" href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="90px" height="90px"></a>
+     <a class="navbar-brand mx-auto navbar-right" href="index.html"><img class="logoImg" src="../images/raccoon-guitar.jpg" width="90px" height="90px"></a>
      <button class="navbar-toggler navbar-right" type="button" data-toggle="collapse" data-target=".dual-collapse2">
        <span class="navbar-toggler-icon navbar-right"></span>
      </button>
@@ -81,7 +81,7 @@
   </div>
   <div class="row w-100 justify-content-center ">
     <div class="col logoFooterLink" align=center>
-      <a class="align-self-center " href="index.html"><img class="logoImg" src="./images/raccoon-guitar.jpg" width="200px" height="200px"></a>
+      <a class="align-self-center " href="index.html"><img class="logoImg" src="../images/raccoon-guitar.jpg" width="200px" height="200px"></a>
     </div>
   </div>
 
@@ -92,7 +92,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- custon javascript -->
-    <script type="text/javascript" src="./js/script.js"></script>
+    <script type="text/javascript" src="../js/script.js"></script>
     <script type="text/javascript" src="./public/js/script.js"></script>
 
 </body>
