--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         if($("#bandName").val().trim() !== ""){
           var bandname = $("#bandName").val().trim();
 
-          window.location.href = `/results/${bandname}`;
+          window.location.href = `/bands/${bandname}`;
         }
     })
     </script>
