--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
                 <div class="input-group">
                   <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
                   <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
-                </div>
-                <div id="login">
                   <img src="./images/offline.png" id ="spotify" class="img-responsive" data-offline="./images/offline.png" data-online="./images/online.png">
                 </div>
+                <!-- <div id="login"> -->
+                  <!-- <img src="./images/offline.png" id ="spotify" class="img-responsive" data-offline="./images/offline.png" data-online="./images/online.png"> -->
+                <!-- </div> -->
             </div>
           </div>
 
