changed from to div

--- a/results.html
+++ b/results.html
@@ -31,10 +31,10 @@
    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
      <ul class="navbar-nav ml-auto justify-content-right">
        <li class="nav-item justify-content-right">
-         <form class="form-inline my-2 my-lg-0" id="artistSearch">
+         <div class="form-inline my-2 my-lg-0" id="artistSearch">
            <input id="bandName" class="form-control searchInput" type="text" name="bandName" value="" placeholder="Enter your favorite band or artist">
            <button id="submitBtn" class="btn btn-secondary submitButton"type="button" name="button">See Venues</button>
-         </form>
+         </div>
        </li>
      </ul>
    </div>
