--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href=".public/css/style.css">
+    <!-- <link rel="stylesheet" href=".public/css/style.css"> -->
 
     <title>Band It</title>
   </head>
