--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript">
+    if(localStorage.getItem("login")){console.log("there is local storage")}
+    else{console.log("there is no local storage")}
     $.get("/api", function(data){
-      console.log(data);
+      // console.log(data);
     $("#submitBtn").on("click", function(event){
         event.preventDefault();
         if($("#bandName").val().trim() !== ""){
@@ -59,16 +61,20 @@
           window.location.href = `/bands/${bandname}`;
         }
     });
-    if(!data[0]){
+    if(!localStorage.getItem("login")){
+      $.post("/api").then(function(data){
+        data=[]
+        console.log("api cleared");
+      });
       console.log("offline");
       $("#spotify").on("click", function(){
         window.location.href = "/login";
+      localStorage.setItem("login", "online");        
       });
     }else{
       console.log("online");
       var online = $("#spotify").attr("data-online")
       $("#spotify").attr("src", online)}
-
       })
     </script>
   </body>
