--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
     if(!localStorage.getItem("login")){
       $.post("/api").then(function(data){
         data=[]
-        console.log("api cleared");
       });
       console.log("offline");
       $("#spotify").on("click", function(){
@@ -74,7 +73,17 @@
     }else{
       console.log("online");
       var online = $("#spotify").attr("data-online")
-      $("#spotify").attr("src", online)}
+      var offline =$("#spotify").attr("data-offline")
+      $("#spotify").attr("src", online)
+      $("#spotify").on("click", function(){
+        localStorage.clear()
+        $("#spotify").attr("src", offline)
+        $.post("/api").then(function(data){
+        data=[]
+        });
+        window.location.href="/"        
+      })
+      }
       })
     </script>
   </body>
